# pykolab

./: .arclint  .flake8  .gitignore  .pylintrc  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  README.tests  conf.py  config.status  configure  configure.ac  cyruslib.py  kolab-cli.py  kolab.py  kolabd.py  kolabtest.py  pykolab.spec.in  saslauthd.py  setup-kolab.py  test-wallace.py  wallace.py
.tx/: config
conf/: Makefile.am  kolab-test-example.conf  kolab.conf  signature_IT.html  signature_IT.txt
doc/: kolab.1
doc/Module_Development_Guide/: publican.cfg
kolab/: Makefile.am  __init__.py
kolabd/: Makefile.am  __init__.py  __init__.py.in  kolabd.sysconfig  kolabd.systemd  kolabd.sysvinit  kolabd.tmpfiles.d.conf  process.py
kwap/: manage.py  settings.py  urls.py
po/: POTFILES.in  POTFILES.skip  ach.po  af.po  af_ZA.po  ak.po  bn.po  bn_IN.po  ca.po  cs.po  da.po  de.po  de_DE.po  el.po  en.po  es.po  fi.po  fr.po  gl.po  gu.po  hi.po  hr.po  hu.po  is.po  it.po  ja.po  ko.po  ml.po  ms.po  nb.po  nl.po  or.po  pa.po  pl.po  pt.po  pt_BR.po  pykolab.pot  ru.po  sk.po  sl.po  (+8 more)
pykolab/: Makefile.am  __init__.py  __init__.py.in  base.py  constants.py  constants.py.in  errors.py  imap_utf7.py  logger.py  plugins.py  telemetry.py  translate.py  translit.py  utils.py
pykolab/auth/: __init__.py
pykolab/auth/ldap/: __init__.py  auth_cache.py  cache.py  syncrepl.py
pykolab/auth/plesk/: __init__.py
pykolab/cli/: __init__.py  cmd_acl_cleanup.py  cmd_add_alias.py  cmd_add_domain.py  cmd_add_user.py  cmd_add_user_subscription.py  cmd_check_quota.py  cmd_count_domain_mailboxes.py  cmd_create_mailbox.py  cmd_delete_domain.py  cmd_delete_mailbox.py  cmd_delete_mailbox_acl.py  cmd_delete_message.py  cmd_export_mailbox.py  cmd_find_domain.py  cmd_list_deleted_mailboxes.py  cmd_list_domain_mailboxes.py  cmd_list_domains.py  cmd_list_mailbox_acls.py  cmd_list_mailbox_metadata.py  cmd_list_mailboxes.py  cmd_list_messages.py  cmd_list_ous.py  cmd_list_quota.py  cmd_list_user_subscriptions.py  cmd_list_users.py  cmd_mailbox_cleanup.py  cmd_remove_mailaddress.py  cmd_remove_user_subscription.py  cmd_rename_mailbox.py  cmd_server_info.py  cmd_set_language.py  cmd_set_mail.py  cmd_set_mailbox_acl.py  cmd_set_mailbox_metadata.py  cmd_set_quota.py  cmd_sync.py  cmd_sync_mailhost_attrs.py  cmd_transfer_mailbox.py  cmd_undelete_mailbox.py  (+2 more)
pykolab/cli/sieve/: cmd_list.py  cmd_put.py  cmd_refresh.py  cmd_test.py
pykolab/cli/telemetry/: cmd_examine_command_issue.py  cmd_examine_session.py  cmd_expire_sessions.py  cmd_list_sessions.py
pykolab/cli/wap/: cmd_system_capabilities.py  cmd_user_types_list.py
pykolab/conf/: __init__.py  defaults.py  entitlement.py  runtime.py
pykolab/imap/: __init__.py  cyrus.py  dovecot.py
pykolab/itip/: __init__.py
pykolab/plugin/defaultfolders/: __init__.py
pykolab/plugin/dynamicquota/: __init__.py
pykolab/plugin/recipientpolicy/: __init__.py
pykolab/plugins/: __init__.py
pykolab/plugins/defaultfolders/: __init__.py
pykolab/plugins/dynamicquota/: __init__.py
pykolab/plugins/recipientpolicy/: __init__.py
pykolab/plugins/roundcubedb/: __init__.py
pykolab/plugins/sievemgmt/: __init__.py
pykolab/setup/: __init__.py  components.py  imap.py  imap_setup.py  ldap_setup.py  setup_freebusy.py  setup_guam.py  setup_imap.py  setup_kolabd.py  setup_ldap.py  setup_manticore.py  setup_mta.py  setup_mysql.py  setup_php.py  setup_roundcube.py  setup_syncroton.py  setup_zpush.py
pykolab/tests/: __init__.py  calendar.py  constants.py  contacts.py  create-contacts.py  kaddress-contact.tpl  kaddressbook-contact.tpl  kcal-event.tpl  mail.py  tests.py
pykolab/tests/imap/: test_create_mailbox.py  test_login.py  test_login_admin.py
pykolab/tests/wap/: test_login.py
pykolab/tests/zpush/: __init__.py  test_000_000.py  test_000_001.py
pykolab/wap_client/: __init__.py  connect.py  request.py
pykolab/xml/: __init__.py  attendee.py  contact.py  contact_reference.py  event.py  note.py  recurrence_rule.py  todo.py  utils.py
saslauthd/: Makefile.am  __init__.py  kolab-saslauthd.systemd  kolab-saslauthd.sysvinit
share/: Makefile.am  kolab2.schema
share/templates/: amavisd.conf.tpl  cyrus.conf.tpl  freshclam.conf.tpl  guam.sys.config.tpl  header_checks.inbound  header_checks.internal  header_checks.submission  imapd.conf.tpl  manticore.js.tpl  master.cf.tpl
share/templates/freebusy/: config.php.tpl
share/templates/horde/conf.d/: 10-kolab_conf_base.php.tpl
share/templates/roundcubemail/: acl.inc.php.tpl  calendar.inc.php.tpl  compose_addressbook.inc.php.tpl  config.inc.php.tpl  db.inc.php.tpl  kolab.inc.php.tpl  kolab_addressbook.inc.php.tpl  kolab_auth.inc.php.tpl  kolab_delegation.inc.php.tpl  kolab_files.inc.php.tpl  kolab_folders.inc.php.tpl  libkolab.inc.php.tpl  main.inc.php.tpl  managesieve.inc.php.tpl  owncloud.inc.php.tpl  password.inc.php.tpl  recipient_to_contact.inc.php.tpl  terms.inc.php.tpl
share/templates/zpush/: config.php.tpl
share/tests/: kaddress-contact.tpl  kcal-event.tpl
tests/: test-000-imports.py  test-001-contact_reference.py  test-001.py  test-002-attendee.py  test-002.py  test-003-event.py  test-004-icalendar.py  test-005-timezone.py
tests/functional/: __init__.py  purge_imap.py  purge_users.py  resource_func.py  synchronize.py  user_add.py
tests/unit/: __init__.py  test-000-imports.py  test-001-contact_reference.py  test-002-attendee.py  test-003-event.py  test-004-icalendar.py  test-005-timezone.py  test-006-ldap_psearch.py  test-007-ldap_syncrepl.py  test-008-sievelib.py  test-009-parse_ldap_uri.py  test-010-transliterate.py  test-011-itip.py  test-011-wallace_resources.py  test-012-wallace_footer.py  test-012-wallace_invitationpolicy.py  test-014-conf-and-raw.py  test-015-translate.py  (+7 more)
ucs/: kolab_sieve.py  listener.py
wallace/: Makefile.am  __init__.py  module_footer.py  module_gpgencrypt.py  module_invitationpolicy.py  module_optout.py  module_resources.py  module_signature.py  modules.py  wallace.systemd  wallace.sysvinit  wallace.tmpfiles.d.conf  wallaced.sysconfig  wallaced.systemd  wallaced.sysvinit
(+34 files in other folders)
