pykolabdir = $(pythondir)/$(PACKAGE)
pykolab_PYTHON = $(wildcard *.py)

pykolab_authdir = $(pythondir)/$(PACKAGE)/auth
pykolab_auth_PYTHON = \
	auth/__init__.py

pykolab_auth_ldapdir = $(pythondir)/$(PACKAGE)/auth/ldap
pykolab_auth_ldap_PYTHON = \
	auth/ldap/__init__.py

pykolab_clidir = $(pythondir)/$(PACKAGE)/cli
pykolab_cli_PYTHON = \
	cli/__init__.py

pykolab_confdir = $(pythondir)/$(PACKAGE)/conf
pykolab_conf_PYTHON = \
	conf/defaults.py \
	conf/__init__.py

pykolab_imapdir = $(pythondir)/$(PACKAGE)/imap
pykolab_imap_PYTHON = \
	imap/__init__.py

pykolab_pluginsdir = $(pythondir)/$(PACKAGE)/plugins
pykolab_plugins_PYTHON = \
	plugins/__init__.py

pykolab_plugins_defaultfoldersdir = $(pythondir)/$(PACKAGE)/plugins/defaultfolders
pykolab_plugins_defaultfolders_PYTHON = \
	plugins/defaultfolders/__init__.py

pykolab_plugins_dynamicquotadir = $(pythondir)/$(PACKAGE)/plugins/dynamicquota
pykolab_plugins_dynamicquota_PYTHON = \
	plugins/dynamicquota/__init__.py

pykolab_plugins_recipientpolicydir = $(pythondir)/$(PACKAGE)/plugins/recipientpolicy
pykolab_plugins_recipientpolicy_PYTHON = \
	plugins/recipientpolicy/__init__.py

pykolab_setupdir = $(pythondir)/$(PACKAGE)/setup
pykolab_setup_PYTHON = \
	setup/imap_setup.py \
	setup/__init__.py \
	setup/ldap_setup.py

pykolab_testsdir = $(pythondir)/$(PACKAGE)/tests
pykolab_setup_PYTHON = \
	tests/calendar.py \
	tests/constants.py \
	tests/contacts.py \
	tests/create-contacts.py \
	tests/__init__.py \
	tests/mail.py

pykolab_tests_zpushdir = $(pythondir)/$(PACKAGE)/tests/zpush
pykolab_tests_zpush_PYTHON = \
	tests/zpush/test_000_000.py \
	tests/zpush/test_000_001.py \
	tests/zpush/__init__.py

